--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "riff"
+name = "riff-comp"
 version = "0.1.0"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+homepage = "https://github.com/mahdi-frms/riff"
+repository = "https://github.com/mahdi-frms/riff"
+author = ["mahdi-frms <mahdif1380@outlook.com>"]
+description = "file comparison utility built in rust"
+categories = ["command-line-utilities"]
 
 [dependencies]
 colored = "2"
